# ClimateX-Challenge

./: Readme.md  main.py  pyproject.toml
sample_data/: sample.geojson
tests/: test_main.py
