[project]
name = "climatex-challenge"
version = "0.1.0"
description = "Code challenge project for ClimateX"
authors = [
    { name = "Engin Gem"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]
